<resources>
    <string name="app_name">Top Video Status</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="facebook_app_id">1849960295024199</string>
    <string name="fb_login_protocol_scheme">fb1849960295024199</string>




    <string name="AD_MOB_TIME">15</string>

    <string name="app_id">ca-app-pub-6580559597285351~8930033574</string>
    <string name="ad_unit_id_banner">ca-app-pub-6580559597285351/5920726855</string>
    <string name="ad_unit_id_interstitial">ca-app-pub-6580559597285351/4416073492</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <array name="colors_load">
        <item>@color/colorPrimaryDark</item>
        <item>@color/colorPrimaryDark</item>
    </array>

    <array name="colors_load_img">
        <item>@color/white</item>
        <item>@color/white</item>
    </array>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_infos"><![CDATA[Report bug & Help]]></string>
    <string name="error_short_value">Your field is too short</string>
    <string name="error_mail_valide">Please enter a valid E-mail</string>
    <string name="message_sended">Message has been sent successfully</string>
    <string name="progress_login">Work in progress</string>
    <string name="policy_privacy">Policy privacy</string>
    <string name="action_rate">Rate App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_label">Choose your languages</string>
    <string name="loading_language">Loading Languages ...</string>
    <string name="error_server">Sorry something went wrong</string>
    <string name="try_again">Try agin</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="more_status">MORE STATUS</string>
    <string name="permission_desc">Please allow permission to continue use the application perfectly</string>
    <string name="permission_title">We need your permission</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_latest">Latest</string>
    <string name="upload_image">Upload image</string>
    <string name="edit_text_upload_title_error">Title very short , please a write correct title</string>
    <string name="image_upload_error">Please select an image</string>
    <string name="video_upload_error">Please select an image</string>
    <string name="gif_upload_error">Please select an image</string>
    <string name="image_upload_success">Your image has been successfully uploaded</string>
    <string name="video_upload_success">Your video has been successfully uploaded</string>
    <string name="joke_upload_success">Your Joke has been successfully added</string>
    <string name="status_upload_success">Your Status has been successfully added</string>
    <string name="gif_upload_success">Your GIF has been successfully added</string>
    <string name="no_connexion">Connection problem</string>
    <string name="retry">Retry</string>
    <string name="upload_gif">Upload GIF</string>
    <string name="please_login">Please sign in !</string>
    <string name="welcome_login">Welcome to Status</string>
    <string name="welcome_login_text">Login to upload , image ,video ....</string>
    <string name="operation_progress">Operation in progress</string>
    <string name="account_disabled">Sorry your account has been locked</string>
    <string name="login_gg_text">Login with google</string>
    <string name="message_logout">You are successfully logout</string>
    <string name="more_jokes">MORE JOKES</string>
    <string name="more_images">MORE IMAGES</string>
    <string name="more_gifs">MORE GIFS</string>
    <string name="more_videos">MORE VIDEOS</string>
    <string name="update_now">Update Now</string>
    <string name="exit">Exit</string>
    <string name="go_pro">GO PRO</string>
    <string name="hint_message">Your message</string>
    <string name="send_support">Send Message</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_name">Full name</string>
    <string name="about_us">About us</string>
    <string name="version_label">Version</string>
    <string name="title_notification">Enable push notifiction</string>
    <string name="label_notification">Receive push notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="label_cache">Clear locally cached Videos. Currently : </string>
    <string name="policy_privacy_url">http://ristana.com/privacy_policy.html</string>
    <string name="contact_us">Contact us</string>

    <string name="download_more_from_link">Get more videos from == http://bit.do/wpvideostatus ==</string>
    <string name="upload_video">Upload video</string>
    <string name="share_as_image">Share \n as image</string>
    <string name="share_as_text">Share \n as text</string>
    <string name="copy_status">Copy \n status</string>
    <string name="add_to_favorite">Add to \n favorites</string>
    <string name="copy_joke">Copy \n  Joke</string>
    <string name="comment">Comment</string>
    <string name="write_comment">Write comment</string>
    <string name="comment_hidden">Comment Hidden</string>
    <string name="now_time">Now</string>
    <string name="all_categories">Show all</string>
    <string name="all_categories_gif">All Gifs Categories</string>
    <string name="all_categories_video">All Videos Categories</string>
    <string name="all_categories_status">All Status Categories</string>
    <string name="all_categories_jokes">All Joke Categories</string>
    <string name="all_categories_images">All Images categories</string>

    <string name="loading">Loading</string>
    <string name="invalide_url">Invalide Url</string>
    <string name="loading_user_data">Loading user data</string>
    <string name="edit_my_profile">Edit my profile</string>

    <string name="hint_facebook">Facebook url</string>
    <string name="hint_twitter">Twitter url</string>
    <string name="hint_instragram">Instagram Url</string>
    <string name="save">Save</string>
    <string name="menu_me">Me</string>
    <string name="comments">  Comments</string>
    <array name="autosize_text_sizes">
        <item>10sp</item>
        <item>12sp</item>
        <item>20sp</item>
        <item>40sp</item>
        <item>100sp</item>
    </array>
    <string name="skip">Skip</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="rate_our_app_message">If you love our application ,please take a moment to rate it .</string>
    <string name="rate_now">Rate Now</string>
    <string name="later">Later</string>
    <string name="no_again">Don’t ask again</string>
    <string name="description_subsribte">With our pack. You can enjoy an ad-free experiance . and focus on the  essential!</string>
    <string name="select_language">Select your Languages</string>

    <string name="on_review">On review</string>

    <string name="title_slide_1">Welcome to Status And Videos App</string>
    <string name="description_slide_1">Thank you for downloading Status And Videos App we hope you like it , enjoy .</string>

    <string name="title_slide_2">We are using tags</string>
    <string name="description_slide_2">Find your status Videos more quickly with tags system</string>

    <string name="title_slide_3">Be an Author</string>
    <string name="description_slide_3">Sign in and be one of our community and share your best Status with others</string>

    <string name="title_slide_4">Download status</string>
    <string name="description_slide_4">Dwonload status as image and keep it on your phone , share and use it when you want</string>

    <string name="title_slide_5">Favorites</string>
    <string name="description_slide_5">Add your favorites status to your favorite list and use it later</string>

    <string name="title_slide_6">Reactions buttons</string>
    <string name="description_slide_6">Browse best status collection  and give your reaction</string>

    <string name="title_slide_7">EASY TO SHARE</string>
    <string name="description_slide_7">Share any Status from the application to any social network as text or image</string>

    <string name="title_slide_8">Remove ads</string>
    <string name="description_slide_8">Go PRO and enjoy with apps without any ads ,with a small price .</string>
    <string name="share_this_app">Share this App</string>
    <string name="images_downloaded">Video has been downloaded successfully</string>
    <string name="twitter_not_installed">Twitter have not been installed</string>
    <string name="app_not_installed">No App installed</string>
    <string name="share_via">Shared via</string>
    <string name="downloading">Downloading</string>
    <string name="instagram_not_installed">Instagram have not been installed</string>
    <string name="hike_not_installed">Hike have not been installed</string>
    <string name="snapchat_not_installed">Snapshat have not been installed</string>
    <string name="messenger_not_installed">Messenger have not been installed</string>
    <string name="facebook_not_installed">Facebook have not been installed</string>
    <string name="whatsapp_not_installed">Whatsapp have not been installed</string>
    <string name="download_failed">Download failed! Please check your internet connection and try again</string>
    <string name="my_profile">My Profile</string>
    <string name="menu_follow">Follow</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="downloaded_video">Downloaded Videos</string>

</resources>
