<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
        android:title="Home" />
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/my_profile"
            android:visible="false"/>
        <item
            android:id="@+id/my_downloaded"
            android:icon="@drawable/ic_download"
            android:title="@string/downloaded_video" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/buy_now"
            android:icon="@drawable/ic_monetization_on"
            android:title="@string/go_pro"
            android:visible="false"/>
    </group>
    <item android:title="Applications">
        <menu>

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star"
                android:title="@string/action_rate" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_app"
                android:title="@string/share_this_app" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_info_black"
                android:title="@string/action_infos" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/ic_lock"
                android:title="@string/policy_privacy" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
